<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/meeting_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:autofillHints="MeetingName"
            android:hint="@string/meeting_topic"
            android:maxLength="20"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/room_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:hint="@string/choose_meeting"
            app:layout_constraintEnd_toEndOf="@+id/meeting_topic"
            app:layout_constraintStart_toStartOf="@+id/meeting_topic"
            app:layout_constraintTop_toBottomOf="@+id/meeting_topic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/room_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/room_choice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_choice" />

        <ImageButton
            android:id="@+id/date_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_date_icon_foreground"
            app:layout_constraintEnd_toEndOf="@+id/participant_recycler_view"
            app:layout_constraintStart_toStartOf="@+id/participant_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/participant_recycler_view" />

        <Button
            android:id="@+id/validate_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/validate_meeting"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/time_view"
            app:layout_constraintStart_toStartOf="@+id/time_view"
            app:layout_constraintTop_toBottomOf="@+id/time_view" />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/click_on_calendar"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/date_image"
            app:layout_constraintStart_toStartOf="@+id/date_image"
            app:layout_constraintTop_toBottomOf="@+id/date_image" />

        <ImageButton
            android:id="@+id/time_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_time_icon_foreground"
            app:layout_constraintEnd_toEndOf="@+id/date_image"
            app:layout_constraintStart_toStartOf="@+id/date_image"
            app:layout_constraintTop_toBottomOf="@+id/date_image" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:hint="@string/click_on_clock"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/time_image"
            app:layout_constraintStart_toStartOf="@+id/time_image"
            app:layout_constraintTop_toBottomOf="@+id/time_image" />

        <TextView
            android:id="@+id/participant_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal"
            android:hint="@string/participants_to_choose"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/room_list"
            app:layout_constraintStart_toStartOf="@+id/room_list"
            app:layout_constraintTop_toBottomOf="@+id/room_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participant_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/participant_item"
            app:layout_constraintStart_toStartOf="@+id/participant_item"
            app:layout_constraintTop_toBottomOf="@+id/participant_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
