...
    <string name="click_on_calendar">Cliquez sur le calendrier pour définir la date</string>
    <string name="click_on_clock">Cliquez sur l\'horloge pour définir l\'heure</string>
    <string name="participants_to_choose">Selectionnez les participants</string>
    <string name="demo">Demo</string>
    <string name="demonstration">Demonstration</string>
    <string name="all_meetings">Toutes mes réunions</string>
    <string name="filtration_by_place">Filtrer par Lieu</string>
    <string name="filtration_by_date">Filtrer par Date</string>
    <string name="room_Peach">Salle Peach</string>
    <string name="room_Mario">Salle Mario</string>
    <string name="room_Luigi">Salle Luigi</string>
    <string name="comma">, \u0020</string>
    <string name="room_is_deleted">La réunion a été supprimée</string>
    <string name="empty_full_list">La liste de réunion est vide</string>
    <string name="empty_date">Aucune réunion à cette date</string>
...
